--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,11 +2,11 @@
     [hidden]="loginService.checkLogin()">
   <div class="form-group">
     <input type="text" class="form-control" [(ngModel)]="model.username"
-           ngControl="username" name="username" placeholder="username" required="true">
+           ngControl="username" name="username" placeholder="username">
   </div>
   <div class="form-group">
     <input type="password" class="form-control" [(ngModel)]="model.password" 
-           ngControl="password" name="password"placeholder="password" required="true">
+           ngControl="password" name="password"placeholder="password">
   </div>
   <button type="submit" class="btn btn-default">Login</button>
 </form>
