--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <div id="logo" style="float:left;width:15%">
       <a href="">
-      <img src="http://www.texasintl.edu.np/assets/upload/images/config/logo.png" 
-      alt="Texas International College" title="Texas International College">
+      <!-- <img src="http://www.texasintl.edu.np/assets/upload/images/config/logo.png" 
+      alt="Texas International College" title="Texas International College"> -->
       </a>
     </div>
     <ul class="nav navbar-nav">
